# SafeServe

./: DynamicTest.hi  DynamicTest.hs  MORESTUFF.hs  README  SafeServe.hs  data-default.diff  data-default.patch  plugins.diff  plugins.patch  presentation.md  test.hi  test.hs
WWW/Templates/: Editor.hs  MainPage.hi  MainPage.hs
WWW/static/jquery-ui/development-bundle/demos/: index.html
WWW/static/jquery-ui/development-bundle/themes/ui-lightness/: jquery-ui-1.8.16.custom.css
WWW/static/jquery-ui/development-bundle/ui/: jquery-ui-1.8.16.custom.js
api/: API.hi  API.hs
paper/: paper.tex
plugins/: Default.hi  DynamicTest.hi  DynamicTest.hs  Jimbo.hs  Newsite.hi  Newsite.hs
plugins/Newsite/dest/: path
safebase/: LICENSE  changelog.md  readme.md  safebase.cabal
safebase/src/: SafeBase.hs
safebase/src/SafeBase/: ByteString.hs  Enumerator.hs  Framework.hs  RIO.hs
safebase/src/SafeBase/ByteString/: Char8.hs
safeblaze/: LICENSE  readme.md  safeblaze.cabal
safeblaze/src/: SafeBlaze.hs
safeblaze/src/SafeBlaze/: Html5.hs  Internal.hs
safeblaze/src/SafeBlaze/Html5/: Attributes.hs
safeblaze/src/SafeBlaze/Renderer/: Pretty.hs  String.hs  Text.hs  Utf8.hs
safeserve/: LICENSE  SafeServe.hs  readme.md  safeserve.cabal
safeserve/WWW/Templates/: Uploaded.hs
safeserve/WWW/static/: hello.txt
safeserve/plugins/: Default.hs  Default2.hi  DynamicTest.hi  DynamicTest.hs  Jimbo.hi  Newsite.hi
safeserve/plugins/Newsite/: riotest.txt
safeserve/src/Network/: Miku.hs
safeserve/src/Network/SafeServe/: Config.hs  Engine.hs  Utils.hs
unneeded/: Plugin.hi  dynprogram.hs  extrajunk.hs
unneeded/air/: .gitignore  Nemesis  air.cabal  changelog.md  readme.md
unneeded/air/src/: Air.hs  Test.hs
unneeded/air/src/Air/: Env.hs  Light.hs  SimpleMath.hs
unneeded/air/src/Air/Control/Monad/: ListBuilder.hs  ObjectBuilder.hs
unneeded/air/src/Air/Data/: Default.hs  Managed.hs  Monoid.hs
unneeded/air/src/Air/Data/Record/: SimpleLabel.hs
unneeded/air/src/Air/Data/Record/SimpleLabel/: TH.hs
unneeded/sack/: .gitignore  Nemesis  changelog.md  readme.md  sack.cabal
unneeded/sack-contrib/: .gitignore  Nemesis  readme.md  sack-contrib.cabal
unneeded/sack-contrib/src/Sack/Contrib/: AirBackports.hs  Constants.hs  Mime.hs  Request.hs  Response.hs  Test.hs  Utils.hs
unneeded/sack-contrib/src/Sack/Contrib/Middleware/: BounceFavicon.hs  Cascade.hs  Censor.hs  Config.hs  ContentLength.hs  ContentType.hs  Debug.hs  ETag.hs  File.hs  Head.hs  Hub.hs  IOConfig.hs  Inspect.hs  Lambda.hs  Lucky.hs  NotFound.hs  RegexpRouter.hs  ShowExceptions.hs  ShowStatus.hs  SimpleAccessLogger.hs  Static.hs  URLMap.hs  UTF8Body.hs  UserMime.hs  XForwardedForToRemoteHost.hs
unneeded/sack/example/: Test.hs  hello1.hs  hello2.hs  hello3.hs
unneeded/sack/src/: Sack.hs
unneeded/safeserve/: safeserve.cabal
unneeded/safeserve/src/Network/SafeServe/: DSL.hs  Type.hs
