Name:                 safeserve
Version:              2011.12
Build-type:           Simple
Synopsis:             a safe web server
Description:
        
    SafeServe: a safe web server that allows users to edit the server-side code

License:              BSD3
License-file:         LICENSE
Author:               John Hiesey
Maintainer:           John Hiesey <john@hiesey.com>
Build-Depends:        base
Cabal-version:        >= 1.2
category:             Web
data-files:           readme.md, changelog.md

executable safeserve
  ghc-options: -Wall
  main-is: SafeServe.hs
  build-depends: base, safebase, safeblaze, blaze-html, directory, enumerator,
    filepath, bytestring, hack2-contrib, hack2-handler-snap-server, miku, deepseq,
    hack2, mtl, air, plugins
  hs-source-dirs: api, .
  
library
  ghc-options: -Wall -XSafe
  build-depends: safebase
  hs-source-dirs: api
  exposed-modules:  API
