Name:                 sack-contrib
Version:              2011.12
Build-type:           Simple
Synopsis:             Sack contrib
Description:          Common middlewares and utilities that helps working with Sack
License:              BSD3
License-file:         LICENSE
Author:               John Hiesey
Maintainer:           John Hiesey <john@hiesey.com>
Build-Depends:        base
Cabal-version:        >= 1.2
category:             Web
data-files:           readme.md, changelog.md

library
  ghc-options: -XSafe
  build-depends: 
                    base >=4 && < 100
                  , cgi
                  , network
                  , old-locale
                  , old-time
                  , directory
                  , filepath
                  , containers
                  , bytestring
                  , data-default >= 0.2
                  , time
                  , air >= 2011.6.19
                  , sack >= 2011.12
                  , utf8-string
                  -- , ansi-wl-pprint
                  , regexpr
                  , enumerator
                  , safebase
                  
  hs-source-dirs: src/
  
  exposed-modules:  
                    
                    Sack.Contrib.Constants
                    Sack.Contrib.Middleware.BounceFavicon
                    Sack.Contrib.Middleware.Censor
                    Sack.Contrib.Middleware.Config
                    Sack.Contrib.Middleware.ContentLength
                    Sack.Contrib.Middleware.ContentType
                    Sack.Contrib.Middleware.Debug
                    Sack.Contrib.Middleware.File
                    Sack.Contrib.Middleware.Head
                    Sack.Contrib.Middleware.Inspect
                    Sack.Contrib.Middleware.NotFound
                    Sack.Contrib.Middleware.RegexpRouter
                    -- Sack.Contrib.Middleware.ShowExceptions
                    -- Sack.Contrib.Middleware.SimpleAccessLogger
                    -- Sack.Contrib.Middleware.Hub
                    Sack.Contrib.Middleware.Static
                    Sack.Contrib.Middleware.URLMap
                    Sack.Contrib.Middleware.IOConfig
                    Sack.Contrib.Middleware.UserMime
                    -- Sack.Contrib.Middleware.UTF8Body
                    Sack.Contrib.Middleware.Cascade
                    Sack.Contrib.Middleware.XForwardedForToRemoteHost
                    Sack.Contrib.Mime
                    Sack.Contrib.Request
                    Sack.Contrib.Response
                    Sack.Contrib.Utils
                    Sack.Contrib.AirBackports




