Name:                 sack
Version:              2011.12
Build-type:           Simple
Synopsis:             a Safe Haskell Webserver Interface
Description:
        
    Sack: a Safe Haskell Webserver Interface, based on Hack V2 by Jinjing Wang

License:              BSD3
License-file:         LICENSE
Author:               John Hiesey
Maintainer:           John Hiesey <john@hiesey.com>
Build-Depends:        base
Cabal-version:        >= 1.2
category:             Web
data-files:           readme.md, changelog.md

library
  ghc-options: -Wall -XSafe
  build-depends: base >= 3 && < 5, data-default >= 0.2, bytestring, enumerator < 5, safebase
  hs-source-dirs: src/
  exposed-modules:  
                    Sack
