Name:                 safeserve
Version:              2011.12
Build-type:           Simple
Synopsis:             A minimum web dev DSL in Haskell
Description:
    
    A simple library for fast web prototyping in Haskell, based on Miku

License:              BSD3
License-file:         LICENSE
Author:               John Hiesey
Maintainer:           John Hiesey <john@hiesey.com>
Build-Depends:        base
Cabal-version:        >= 1.2
category:             Web
-- homepage:             https://github.com/nfjinjing/miku
data-files:           readme.md, changelog.md, Nemesis, known-issues.md

library
  build-depends:      base > 4 && <= 5
                    , data-default
                    , hack2 >= 2011.6.20
                    , hack2-contrib >= 2011.6.20
                    , utf8-string
                    , air >= 2011.6.19
                    , mtl
                    , containers
                    , bytestring
                    
  hs-source-dirs: src/
  exposed-modules:  
                      Network.SafeServe
                      Network.SafeServe.Config
                      Network.SafeServe.DSL
                      Network.SafeServe.Engine
                      Network.SafeServe.Type
                      Network.SafeServe.Utils
